HDR image thumbnails cause blender to crash #42421

Closed
opened 2014-10-28 04:42:34 +01:00 by Daniel Stokes · 26 comments

System Information
Operating system: Windows 7 64 bit Graphics card: nvidea gtx 660 ti

Blender Version
Broken: 2.72 6c2ce7a and official blender 2.72b

Error Description: When viewing hdr images in the file browser with thumbnails enabled blender will crash. When an hdr is opened using the list view, opening the "browse image to be linked" drop down will crash blender.

Exact steps for others to reproduce the error
Open new scene. Assign environment texture to world. Click open and change file display mode to thumbnails. Open a folder with an hdr image. Blender will crash.

If an hdr is loaded by not using the thumbnail preview mode then anytime the image datablock drop down menu is opened blender will crash.

**System Information** Operating system: Windows 7 64 bit Graphics card: nvidea gtx 660 ti **Blender Version** Broken: 2.72 6c2ce7a and official blender 2.72b Error Description: When viewing hdr images in the file browser with thumbnails enabled blender will crash. When an hdr is opened using the list view, opening the "browse image to be linked" drop down will crash blender. **Exact steps for others to reproduce the error** Open new scene. Assign environment texture to world. Click open and change file display mode to thumbnails. Open a folder with an hdr image. Blender will crash. If an hdr is loaded by not using the thumbnail preview mode then anytime the image datablock drop down menu is opened blender will crash.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DanielStokes

Added subscriber: @DanielStokes
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

cannot confirm, working fine here (linux).
maybe it's the specific file? (e.g. do the HDRs from openfootage.net work?)

cannot confirm, working fine here (linux). maybe it's the specific file? (e.g. do the HDRs from openfootage.net work?)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Please find the HDR file causing the crash and link to it.

Please find the HDR file causing the crash and link to it.

Added subscriber: @SylvainMaziere

Added subscriber: @SylvainMaziere

Tested on 2.72 and 2.72b on macosx 10.10: no problem, working fine too.

Tested on 2.72 and 2.72b on macosx 10.10: no problem, working fine too.
Author

I tried again with an HDR from openfootage and it didn't crash. I think it is related to the file size because all the HDRs that were crashing on my computer were 30 MiB and upwards.

I tried again with an HDR from openfootage and it didn't crash. I think it is related to the file size because all the HDRs that were crashing on my computer were 30 MiB and upwards.
Member

Just tried with 180MB HDR: no crash
however: this one did not get a preview image generated (plain document icon instead)

Just tried with 180MB HDR: no crash however: this one did not get a preview image generated (plain document icon instead)
Author

I opened the affected HDRs in photoshop and they were partially corrupted. I never noticed because if blender didn't crash when opening them then in the render they looked fine. Thank you for your help. Sorry for wasting your time.

I opened the affected HDRs in photoshop and they were partially corrupted. I never noticed because if blender didn't crash when opening them then in the render they looked fine. Thank you for your help. Sorry for wasting your time.

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

@lichtwerk: above 100 Mb no preview icons get generated

@DanielStokes: could you still link one of those corrupted files? Even if they are corrupted, I don't think Blender should crash.

@lichtwerk: above 100 Mb no preview icons get generated @DanielStokes: could you still link one of those corrupted files? Even if they are corrupted, I don't think Blender should crash.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2014-11-07 09:13:05 +01:00

Let’s close that for until requested data are provided…

Let’s close that for until requested data are provided…
Author
Here is one of the files. https://dl.dropboxusercontent.com/u/1331174/GoldenGate_8k.hdr

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

I can confirm the segfault here on linux 64 with 5674ac9.

Some quick backtrace: asan_bt.txt

(NOTE) This also happens if you manage to load the image in e.g. an image texture node in Cycles and switch to Material view (preview and final render are fine).

I can confirm the segfault here on linux 64 with 5674ac9. Some quick backtrace: [asan_bt.txt](https://archive.blender.org/developer/F124505/asan_bt.txt) (NOTE) This also happens if you manage to load the image in e.g. an image texture node in Cycles and switch to Material view (preview and final render are fine).

Hrrmmmm… We read way too much data somehow here, this file is 8192 × 3153 for 45MB (which rather low, but its lower part can probably be compressed quite heavily even with RLE), and we overrun at line 1974: reading line 1974 starting at 42.882545MB from file start!

Note the file itself is valid afaict (imagemagick opens it e.g.).

Hrrmmmm… We read way too much data somehow here, this file is 8192 × 3153 for 45MB (which rather low, but its lower part can probably be compressed quite heavily even with RLE), and we overrun at line 1974: `reading line 1974 starting at 42.882545MB from file start`! Note the file itself is valid afaict (imagemagick opens it e.g.).

Grmlll… a (very rough) estimation says me this file should be around 75MB anyway… :/

Can you please give us application used to generate this HDR (comment says Blender???)? With parameters used, too…

Grmlll… a (very rough) estimation says me this file should be around 75MB anyway… :/ Can you please give us application used to generate this HDR (comment says Blender???)? With parameters used, too…

OK, so can confirm this file is definitively invalid (truncated, actually).

Will add some safeguard code to avoid crashing in such cases, nicer anyway.

OK, so can confirm this file is definitively invalid (truncated, actually). Will add some safeguard code to avoid crashing in such cases, nicer anyway.

This issue was referenced by cc0623ff6c

This issue was referenced by cc0623ff6c97c8bde5045f9aba1014f6dbd6bc8e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit cc0623ff6c.

Closed by commit cc0623ff6c.

This issue was referenced by b0ea6aecb3582e223b85e0cc336b5afcc8600ede

This issue was referenced by b0ea6aecb3582e223b85e0cc336b5afcc8600ede

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42421
No description provided.